--- a/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-3-html-css-seletores-e-posicionamento/3. grouping-selectors-pseudoclasses/style.css
+++ b/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-3-html-css-seletores-e-posicionamento/3. grouping-selectors-pseudoclasses/style.css
@@ -1,31 +1,41 @@
 div:hover {
-  border: 1px solid #171515;
-  transition: 1s;
-}
-
-div:nth-child(3) {
-  background-color: red;
-}
-
-
-div:nth-child(4) {
-  background-color: orange;
-}
-
-div:nth-child(5) {
-  background-color: blue;
-  font-size: 3em;
-}
-
-div:nth-child(6) {
-  background-color: brown;
-}
-
-div:nth-child(7) {
-  background-color: aliceblue;
+  border: 3px solid #171515;
 }
 
 div:nth-child(odd) h3 {
   font-style: italic;
 }
+
+div:nth-child(3) {
+  background-color: red;
+  font-size: 1.1em;
+  color: rgb(255, 244, 233);
+}
+
+
+div:nth-child(4) {
+  background-color: orange;
+  font-family: Helvetica;
+}
+
+div:nth-child(5) {
+  background-color: blue;
+  font-size: 3em;
+  font-family: monospace;
+  font-weight: 700;
+}
+
+div:nth-child(6) {
+  background-color: brown;
+  font-family: sans-serif;
+  font-size: 1.8em;
+  color: rgb(206, 206, 15);
+}
+
+div:nth-child(7) {
+  background-color: aliceblue;
+  font-family: Ubuntu;
+}
+
+
 
