--- a/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-4-html-semantico/2. exercises-3.4/style.css
+++ b/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-4-html-semantico/2. exercises-3.4/style.css
@@ -10,6 +10,14 @@ body {
   background-color: rgb(254, 251, 233);
 }
 
+table {
+  border-collapse: collapse;
+  float: left;
+  clear: both;
+  width: 48%;
+  margin-right: 5em;
+}
+
 /* HEADER CONTAINER STYLE */
 #header-container {
   background-color: rgb(239, 238, 221);
@@ -28,11 +36,12 @@ body {
 
 /* NAVIGATION STYLE */
 #navigation-container {
-  background-color: rgba(244, 164, 96, 0.6);
+  background-color: rgb(244, 164, 96);
   height: 25px;
   padding-bottom: 10px;
   padding-right: 15px;
   padding-top: 15px;
+  position: absolute;
   width: 100%;
 }
 
@@ -53,13 +62,70 @@ body {
 
 #navigation-container ul li a:hover {
   color: rgba(24, 58, 29, 0.5);
-  transition: 1500ms;
+  transition: 1200ms;
 }
 
 /* MAIN CONTAINER STYLE */
 #main-container {
-
+  border: 1px solid red;
+  padding: 60px 15px 20px;
+  width: 70%;
+  margin-left: 15px;
 }
+
+.article-container {
+  border: 1px solid green;
+  padding: 10px;
+  position: relative;
+  width: 80%;
+}
+
+.article-container h2 {
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 1.8em;
+  font-family: ubuntu;
+  color: rgba(101, 228, 186, 0.8);
+}
+
+.image-1 {
+  display: block;
+  box-shadow: 0 0 1em rgba(136, 216, 189, 0.6);
+  border-radius: 25px 0 0;
+  margin-bottom: 10px;
+}
+
+.image-2 {
+  display: inline-block;
+  border-radius: 0 0 25px;
+  box-shadow: 0 0 1em;
+  box-shadow: 0 0 1em rgba(136, 216, 189, 0.6);
+}
+
+.section-container-specie {
+  box-shadow: 0 1px 0.5em rgb(168, 167, 167);
+  padding: 15px;
+  border-radius: 5px;
+}
+
+.section-container-specie td {
+  padding: 11px;
+  font-style: italic;
+  font-family: ubuntu;
+}
+
+.theader {
+  border-bottom: 1px solid rgba(244, 164, 96, 0.6);
+  width: 150px;
+  text-align: left;
+  padding: 8px;
+  font-family: ubuntu;
+}
+
+tr:nth-child(odd) {
+  background-color: rgba(244, 164, 96, 0.4);
+}
+
 
 /* ASIDE CONTAINER STYLE */
 #aside-container {
