--- a/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-4-html-semantico/2. exercises-3.4/style.css
+++ b/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-4-html-semantico/2. exercises-3.4/style.css
@@ -212,7 +212,7 @@ tr:nth-child(odd) {
 }
 
 .references-list ul li {
-  line-height: 24px;
+  line-height: 34px;
   list-style-position: inside;
   list-style-type: square;
 }
@@ -258,5 +258,18 @@ tr:nth-child(odd) {
 
 /* FOOTER CONTAINER STYLE */
 #footer-container {
+  width: 100%;
+  height: 80px;
+  background-color: #5c12ca57;;
+}
 
+#footer-container div {
+  text-align: center;
+}
+
+#footer-container div p {
+  margin-top: 40px;
+  font-family: ubuntu;
+  font-weight: 500;
+  font-style: italic;
 }
